--- a/Pokedex/style.css
+++ b/Pokedex/style.css
@@ -51,7 +51,6 @@ body {
 header {
     padding-block: 1rem; 
     box-shadow: 0 0 2rem -1rem rgba(0, 0, 0, .5);  
-
 }
 
 .nav {
@@ -62,7 +61,6 @@ header {
     padding-inline: 2rem;
     max-width: 1000px;
     margin: 0 auto;
-
 }
 
 .nav-list {
@@ -79,7 +77,7 @@ header {
     cursor: pointer;
     text-transform: uppercase;
     font-weight: 600;
-    box-shadow:  0 0 1rem rgba(0, 0, 0, .25);
+    box-shadow: 0 0 1rem rgba(0, 0, 0, .25);
     transition: .2s;
 }
 
@@ -96,7 +94,7 @@ main {
 
 .pokemon-todos {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
     gap: 1rem;
 }
 
@@ -123,7 +121,7 @@ main {
     overflow: hidden;
 }
 
-.pokemon-id-bakc {
+.pokemon-id-back {
     position: absolute;
     top: 1rem;
     left: 50%;
@@ -136,7 +134,7 @@ main {
 }
 
 .pokemon-imagen {
-    padding-inline-start: 1rem;
+    padding-inline: 1rem;
     display: flex;
     justify-content: center;
 }
@@ -164,9 +162,9 @@ main {
 }
 
 .pokemon-id {
-    background-color: red;
+    background-color: var(--clr-gray);
     padding: .25rem .5rem;
-    border-radius: 1oovmax;
+    border-radius: 100vmax;
     font-size: .75rem;
     font-weight: 500;
 }
@@ -198,7 +196,7 @@ main {
 .stat {
     background-color: var(--clr-gray);
     padding: .25rem .5rem;
-    border-radius: 10vmax;
+    border-radius: 100vmax;
 }
 
 
